Mobile api saloons, appoitment form insta confimet status of visite, job to clear completed visits
